--- a/app/views/characters/_using_character.html.erb
+++ b/app/views/characters/_using_character.html.erb
@@ -4,7 +4,7 @@
     <div class="show-character-area-main">
       <span>メインキャラクター</span><br>
       <div class="character-image">
-        <%= image_tag "/Character/#{characterimage_from_character(@character.main_character)}.png", class: "character-image-main" %>
+        <%= image_tag "/Character/#{characterimage_from_character(@character.main_character)}.png", class: "rounded mx-auto d-block" %>
       </div>
     </div>
     <div class="show-character-area-subs">
