--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,39 @@
     <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-lg btn-success" %>
     <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-lg btn-primary" %>
   <% end %>
-
+  
+  <div class="container-fluid">
+    <div class="col-xl-10 offset-xl-1 col-12">
+      <span>大乱闘スマッシュブラザーズ</span>
+      <div class="row justify-content-around bg-primary">
+        <div class="col-md-4 m-2 bg-success">
+          <span>メインキャラクター</span><br>
+          <div class="my-3">
+            <div class="col-8 offset-2 m-auto text-center bg-danger" style="max-height:170px;">
+              <img src="https://pbs.twimg.com/profile_images/1077745403775184896/CW54AOJW_400x400.jpg" alt="" class="rounded img-thumbnail my-2 img-fluid" style="max-height:150px;" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7 m-2 bg-success">
+          <span>サブキャラクター</span><br>
+          <div class="my-3">
+            <div class="row justify-content-around">
+              <div class="col-4 m-auto text-center bg-danger" style="max-height:140px;">
+                <img src="https://pbs.twimg.com/profile_images/1077745403775184896/CW54AOJW_400x400.jpg" alt="" class="rounded img-thumbnail my-2 img-fluid" style="max-height:120px;" />
+              </div>
+              <div class="col-4 m-auto text-center bg-danger" style="max-height:140px;">
+                <img src="https://pbs.twimg.com/profile_images/1077745403775184896/CW54AOJW_400x400.jpg" alt="" class="rounded img-thumbnail my-2 img-fluid" style="max-height:120px;" />
+              </div>
+              <div class="col-4 m-auto text-center bg-danger" style="max-height:140px;">
+                <img src="https://pbs.twimg.com/profile_images/1077745403775184896/CW54AOJW_400x400.jpg" alt="" class="rounded img-thumbnail my-2 img-fluid" style="max-height:120px;" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <!-- ピル部分 -->
   <ul class="nav nav-tabs nav-justified" id="tabs-tab" role="tablist">
     <li class="nav-item">
