--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <%= render 'layouts/shim' %>
     <link rel="stylesheet" href="bootstrap-datetimepicker.min.css">
     <script src="bootstrap-datetimepicker.min.js"></script>
+    <!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    !-->
     
     <style type="text/css">
 	    <!--
@@ -89,7 +92,7 @@
           background-color: #444;
         }
         
-	    !-->
+	    
 	  </style>
   </head>
 
