interrupt validate-tournament-page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <div class="container-fluid">
     <div class="col-xl-10 offset-xl-1 col-12">
       <span>大乱闘スマッシュブラザーズ</span>
-      <div class="row justify-content-around bg-primary">
+      <div class="row justify-content-around bg-info">
         <div class="col-md-4 m-2 bg-success">
           <span>メインキャラクター</span><br>
           <div class="my-3">
