success delete-bootstrap-sass-gem

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 /* universal */
@@ -95,8 +94,8 @@ p {
 }
 
 .field_with_errors {
-  @extend .has-error;
+  //@extend .has-error;
   .form-control {
-    color: $state-danger-text;
+    //color: $state-danger-text;
   }
 }
