--- a/app/views/characters/_using_character.html.erb
+++ b/app/views/characters/_using_character.html.erb
@@ -1,29 +1,49 @@
-<% if @character %>
-  <span><%= @character.game_title %></span>
-  <div class="game-titles">
-    <div class="show-character-area-main">
-      <span>メインキャラクター</span><br>
-      <div class="character-image">
-        <%= image_tag "/Character/#{characterimage_from_character(@character.main_character)}.png", class: "rounded mx-auto d-block" %>
+<div class="container-fluid">
+  <div class="col-xl-10 offset-xl-1 col-12">
+    <% if @character %>
+      <div class="mt-2">
+        <span><%= @character.game_title %></span>
       </div>
-    </div>
-    <div class="show-character-area-subs">
-      <span>サブキャラクター</span><br>
-      <div class="character-image-sub-index">
-        <% if @character.sub_character1 %>
-          <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character1)}.png", class: "character-image-sub" %>
-        <% end %>
-        <% if @character.sub_character2 %>
-          <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character2)}.png", class: "character-image-sub" %>
-        <% end %>
-        <% if @character.sub_character3 %>
-          <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character3)}.png", class: "character-image-sub" %>
-        <% end %>
+      <div class="row justify-content-around">
+        <div class="col-md-4 m-2 bg-dark">
+          <span>メインキャラクター</span><br>
+          <div class="my-3">
+            <div class="col-8 offset-2 m-auto text-center" style="max-height:170px;">
+              <%= image_tag "/Character/#{characterimage_from_character(@character.main_character)}.png", class: "rounded img-thumbnail my-2 img-fluid", :style => "max-height:150px;" %>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7 m-2 bg-dark">
+          <span>サブキャラクター</span><br>
+          <div class="my-3">
+            <div class="row justify-content-around">
+              <% if @character.sub_character1 %>
+                <div class="col-4 m-auto text-center" style="max-height:140px;">
+                  <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character1)}.png", class: "rounded img-thumbnail my-2 img-fluid", :style => "max-height:120px;" %>
+                </div>
+              <% else %>
+                <div class="text-center m-auto">
+                  登録されているキャラクターはありません。
+                </div>
+              <% end %>
+              <% if @character.sub_character2 %>
+                <div class="col-4 m-auto text-center" style="max-height:140px;">
+                  <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character2)}.png", class: "rounded img-thumbnail my-2 img-fluid", :style => "max-height:120px;" %>
+                </div>
+              <% end %>
+              <% if @character.sub_character3 %>
+                <div class="col-4 m-auto text-center" style="max-height:140px;">
+                  <%= image_tag "/Character/#{characterimage_from_character(@character.sub_character3)}.png", class: "rounded img-thumbnail my-2 img-fluid", :style => "max-height:120px;" %>
+                </div>
+              <% end %>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <div class="text-center m-2">
+        登録されているキャラクターはありません。
+      </div>
+    <% end %>
   </div>
-<% else %>
-  <div class="game-titles">
-    登録されているキャラクターはありません。
-  </div>
-<% end %>
+</div>
