--- a/app/views/characters/_edit.html.erb
+++ b/app/views/characters/_edit.html.erb
@@ -1,10 +1,10 @@
 <div class="modal-dialog modal-lg modal-dialog-center">
   <div class="modal-content">
     <div class="modal-header">
+      <h3 class="modal-title mx-auto">【使用キャラクター編集】</h3>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h3 class="modal-title center">【使用キャラクター編集】</h3>
     </div>
     <div class="modal-body">
       <div class="row">
