--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,34 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <div class="container">
     <%= link_to "Super Smash Bros. Tournament App", root_path, id: "logo" %>
+    
     <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ホーム", root_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to "全てのユーザー", users_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              メニュー <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "マイページ", current_user %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "ログアウト", logout_path, method: :delete %>
-              </li>
-            </ul>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="Navber">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link_to "ホーム", root_path, class: "nav-link" %>
           </li>
-        <% else %>
-          <li><%= link_to "ログイン", login_path %></li>
-        <% end %>
-      </ul>
+          <% if logged_in? %>
+            <li class="nav-item active dropdown">
+              <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                メニュー
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%= link_to "マイページ", current_user , class: "dropdown-item" %>
+                <div class="dropdown-divider"></div>
+                <%= link_to "ログアウト", logout_path, method: :delete, class: "dropdown-item" %>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item active">
+              <%= link_to "ログイン", login_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
     </nav>
   </div>
-</header>
+</nav>
