--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -4,10 +4,10 @@
 <div class="modal-dialog modal-md modal-dialog-center">
   <div class="modal-content">
     <div class="modal-header">
+      <h3 class="modal-title mx-auto">【ユーザー情報の更新】</h3>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h3 class="modal-title center">【ユーザー情報の更新】</h3>
     </div>
     <div class="modal-body">
       <div class="row">
