finish validation-tournament-page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,14 @@
           width: 240px;
         }
         
+        th {
+          color: #fff;
+        }
+        
+        td {
+          color: #fff;
+        }
+        
         .datepicker-days th.dow:first-child,
         .datepicker-days td:first-child {
             color: #f00;
