--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="modal-body">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-lg-10 offset-lg-1">
           <%= render 'form' %>
         </div>
       </div>
