--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -3,7 +3,7 @@
 <% provide(:button_text, "一覧") %>
 <h1>トーナメント一覧</h1>
 
-<div class="col-md-10 col-md-offset-1">
+<div class="col-lg-10 offset-lg-1">
   <%= will_paginate %>
   <table class="table table-hover" id="table-users">
     <thead>
