--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -4,7 +4,7 @@
 <h1>新しいトーナメント</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-lg-6 offset-lg-3">
     <%= render 'form' %>
   </div>
 </div>
