--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,15 +1,17 @@
 <% provide(:title, @tournament.name) %>
 <div class="col-md-12">
   <% if master?(@tournament) %>
-    <% unless @started %>
-      <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
-    <% end %>
-    <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+    <div class="row justify-content-around">
+      <% unless @started %>
+        <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+      <% end %>
+      <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+    </div>
   <% end %>
   
   <table class="table table-condensed table-hover" id="table-tournament">
     <thead>
-      <tr>
+      <tr class="text-center">
         <% unless @participants.blank? %>
           <th><%= image_tag @t.live_image_url, :width => "100%", class: "mx-auto" %></th>
         <% else %>
@@ -21,11 +23,13 @@
           <th><%= link_to "トーナメント画像の更新", tournament_reload_path(@tournament), class: "btn btn-lg btn-success" %></th>
           <% if master?(@tournament) %>
             <% unless @started %>
-              <th><%= link_to "参加者を並び替える", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
+              <th><%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
               <th><%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
             <% else %>
               <th><%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %></th>
-              <th><%= link_to "大会を終了させる", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
+              <% if @matches_opening.blank? %>
+                <th><%= link_to "大会を終了する", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
+              <% end %>
             <% end %>
           <% end %>
           <% unless master?(@tournament) %>
@@ -38,14 +42,14 @@
           現在開催中のマッチ<br>
           <% @matches_opening.each do |matches| %>
             <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-            <%= link_to "勝敗報告をする", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
+            <%= link_to "勝敗報告をする", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
           <% end %>
         </th>
         <th>
           終了済みのマッチ<br>
           <% @matches_complete.each do |matches| %>
             <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-            <%= link_to "報告をやり直す", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary" if master?(@tournament) %><br>
+            <%= link_to "報告をやり直す", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary mb-2" if master?(@tournament) %><br>
           <% end %>
         </th>
       </tr>
