--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,27 @@
 <% provide(:title, 'All Users') %>
 <h1>ユーザー一覧</h1>
 
-<div class="col-md-10 col-md-offset-1">
+<div class="col-lg-10 offset-lg-1">
   <%= will_paginate %>
   <table class="table table-condensed table-hover" id="table-users">
     <thead>
       <tr>
         <th><%= User.human_attribute_name :name %></th>
+        <th><%= User.human_attribute_name :image %></th>
+        <th></th>
       </tr>
     </thead>
 
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.name, user %></td>
+        <td>
+          <% if user.image? %>
+            <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;"  %>
+          <% else %>
+            <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;" %>
+          <% end %>
+        </td>
         <td>
           <% if current_user.admin? && !current_user?(user) %>
             <%= link_to "削除", user, method: :delete,
