--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </div>
   
   <!-- ピル部分 -->
-  <ul class="nav nav-tabs nav-justified" id="tabs-tab" role="tablist">
+  <ul class="nav nav-tabs nav-justified mt-2" id="tabs-tab" role="tablist">
     <li class="nav-item active">
       <%= link_to "ホーム", "#tabs-home", id: "tabs-home-tab", "data-toggle" => "tab", role: "tab", "aria-controls" => "tabs-home", "aria-selected" => "true", class: "nav-link" %>
     </li>
